# ArizenOS

./: .editorconfig  .gitattributes  .gitignore  ARCHITECTURE.md  ArizenOS.apbx  BRAND_GUIDELINES.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  MAINTAINERS.md  MODULE_MANIFEST.toml  Makefile  PRODUCT_CHARTER.md  README.md  RELEASE.md  RELEASE_SCHEDULE.md  SECURITY.md  SUPPORT.md  VERSIONING.md  entries.yaml  playbook.conf  playbook.yaml  pnpm-workspace.yaml  requirements.txt  turbo.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  pull_request_template.md
Configuration/: 01-preflight.yml  02-safety-net.yml  03-asset-deploy.yml  04-oem-branding.yml  05-lock-screen.yml  06-theme.yml  07-transparency.yml  08-performance.yml  09-developer.yml  10-finalize.yml  main.yml  rollback.yml
Executables/: security-audit.ps1  wallpaper.ps1
branding/: ARCHITECTURE.md  CONTRIBUTOR_GUIDE.md  MIGRATION.md  NAMING_CONVENTIONS.md  README.md  VERSIONING.md
config/: knowledge.yaml
core/arizen-daemon/: Cargo.toml
core/arizen-daemon/src/: main.rs
docs/: AGENT_ECOSYSTEM.md  ARCHITECTURE.md  CHANGELOG_STANDARDS.md  DEPENDENCY_RULES.md  FEATURE_MATRIX.md  KNOWLEDGE_ENGINE.md  MEMORY_ENGINE.md  NAMING_CONVENTIONS.md  PLAYBOOK_ENGINE.md  PRINCIPLES.md  PROJECT_MANAGEMENT.md  README.md  RELEASE_SCHEDULE.md  REPOSITORY_REFACTOR.md  ROADMAP.md  SPECIFICATION.md  STRUCTURE.md  VERSIONING.md  VISION.md
integrations/lm-studio/: Cargo.toml  lm_studio.py
integrations/lm-studio/src/: client.rs
knowledge/: engine.py
(+235 files in other folders)
