[package]
name        = "arizen-daemon"
version     = "0.1.0"
edition     = "2021"
authors     = ["ArizenOS Contributors"]
description = "ArizenOS central process daemon"
license     = "MIT"

[[bin]]
name = "arizen"
path = "src/main.rs"

[dependencies]
tokio          = { version = "1", features = ["full"] }
tokio-util     = { version = "0.7", features = ["codec"] }
anyhow         = "1"
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
toml           = "0.8"
tracing        = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rmp-serde      = "1"
tonic          = "0.12"
prost          = "0.13"
uuid           = { version = "1", features = ["v4"] }
dirs           = "5"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Pipes",
    "Win32_System_Threading",
] }

[build-dependencies]
tonic-build = "0.12"
