[package]
name        = "arizen-lmstudio"
version     = "0.1.0"
edition     = "2021"
description = "LM Studio integration — primary LLM backend"
license     = "MIT"

[dependencies]
reqwest      = { version = "0.12", features = ["json", "stream"] }
serde        = { version = "1",    features = ["derive"] }
serde_json   = "1"
anyhow       = "1"
tokio        = { version = "1", features = ["full"] }
futures-util = "0.3"
tracing      = "0.1"
